@@ -8,7 +8,13 @@ module Natour
   module_function
 
   def convert(filename, out_dir: nil, out_file: nil, overwrite: false,
-              backend: 'pdf', draft: false, image_maxdim: 16000)
+              backend: 'pdf', draft: false, draft_backend: nil, image_maxdim: 16000)
+    backend = if draft
+                draft_backend || backend
+              else
+                backend
+              end
+
     doc = Asciidoctor.load_file(
       filename,
       backend: backend,
